--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,34 +20,15 @@
       <% files.forEach(function(val){%>
         <div class="task w-72 px-3 py-4 rounded-md bg-zinc-800 ">
           <h1 class="text-white text-3xl tracking-tighter"><%= val%></h1>
-          <a class="text-blue-500 inline-block mt-3" href="/files/<%= val%>">Read More.</a>
+          <div class="flex w-full justify-between items-center">
+          <a class="text-blue-500 inline-block" href="/files/<%= val%>">Read More.</a>
+          <a class="text-zinc-600 " href="/edit/<%= val%>">Edit Filename</a>
+          </div>
         </div>
       <% })%>
       <%} else {%>
         <h3 class="text-zinc-600">No Task Yet...</h3>
-        <%}%>
-
-    <div class="task hidden w-72 px-3 py-4 rounded-md bg-zinc-800 ">
-      <h1 class="text-white text-3xl tracking-tighter">Some task hidden goes here.</h1>
-      <a class="text-blue-500 inline-block mt-3" href="Read More.">Read More.</a>
-    </div>
-    <div class="task hidden w-72 px-3 py-4 rounded-md bg-zinc-800 ">
-      <h1 class="text-white text-3xl tracking-tighter">Some task hidden goes here.</h1>
-      <a class="text-blue-500 inline-block mt-3" href="Read More.">Read More.</a>
-    </div>
-    <div class="task hidden w-72 px-3 py-4 rounded-md bg-zinc-800 ">
-      <h1 class="text-white text-3xl tracking-tighter">Some task hidden goes here.</h1>
-      <a class="text-blue-500 inline-block mt-3" href="Read More.">Read More.</a>
-    </div>
-    <div class="task hidden w-72 px-3 py-4 rounded-md bg-zinc-800 ">
-      <h1 class="text-white text-3xl tracking-tighter">Some task hidden goes here.</h1>
-      <a class="text-blue-500 inline-block mt-3" href="Read More.">Read More.</a>
-    </div>
-    <div class="task hidden w-72 px-3 py-4 rounded-md bg-zinc-800 ">
-      <h1 class="text-white text-3xl tracking-tighter">Some task hidden goes here.</h1>
-      <a class="text-blue-500 inline-block mt-3" href="Read More.">Read More.</a>
-    </div>
-    
+        <%}%>    
     </div>
   </div>
 </body>
